# glkm

./: .gitignore  README.md  bitbucket-pipelines.yml
addons/: configure.ac
addons/data/: Makefile.am  introspect-hal-device-linuxkernelmonitor.xml
addons/src/: Makefile.am  hal-device-proxy.hpp  launcher_main.cpp  linux-kernel-monitor-client-proxy.hpp
documentacion/: Remote DBus communication.odg
documentacion/presentaciones/: presentacion sabor azul.odp  presentacion sabor verde.odp  propuestas para presentacion
glkmd/: Makefile  Makefile.am  Makefile.in  README  aclocal.m4  autogen.sh  config.h  config.h.in  config.status  configure  configure.ac  libtool
glkmd/po/: Makefile  Makefile.in
glkmd/src/: GlkmNetlinkClient.cpp  GlkmNetlinkClient.hpp  LinuxKernelMonitor.cpp  LinuxKernelMonitor.hpp  LinuxKernelMonitor.idl  LinuxKernelMonitor_i.cpp  LinuxKernelMonitor_i.hpp  Makefile  Makefile.am  Makefile.in  MessageNetlink.cpp  MessageNetlink.hpp  MessageNetlinkGlkm.cpp  MessageNetlinkGlkm.hpp  SocketNetlink.cpp  SocketNetlink.hpp  glkm_daemon.cpp  glkmd_test_client.cpp
glkmd/test/: Makefile  Makefile.am  Makefile.in  MessageNetlinkTest.cpp  glkmd_test_client.cpp
gui/: AUTHORS  Doxyfile  Makefile  Makefile.am  Makefile.in  TODO.tasks  aclocal.m4  autogen.sh  config.h  config.h.in  config.status  configure  configure.ac  libtool
gui/data/: Makefile  Makefile.am  Makefile.in  glkm.desktop  glkm.glade  glkmbuilder.glade
gui/doc/: autoconf.quickreference.txt  automake.quickreference.txt  autotools.quickreference.txt  makefile.am.quickreference.txt  translation guide
gui/doc/glkm-design/: 128008  128008.diagram  128057  128057.diagram  128057_69.d  128057_78.d  128057_8.d  128061.diagram  128061_105.d  128061_69.d  128061_78.d  128067.diagram  128067_69.d  128067_78.d  128067_92.d  128069.diagram  128069_69.d  128078  128078_78.d  128092  128092.diagram  128092_61.d  128110.diagram  128121.diagram  128121_78.d  128197.diagram  128206  128220  128220_29.d  128220_78.d  128238.diagram  128310.diagram  128310_69.d  128334  128334.diagram  128348.diagram  128348_29.d  128348_8.d  128366_88.d  128438.diagram  (+44 more)
gui/po/: GNOMELINUXKernelMonitor.pot  LINGUAS  Makefile  Makefile.in  POTFILES  POTFILES.in  es_ES.gmo  es_ES.po
gui/src/: Makefile  Makefile.am  Makefile.in  about-dialog.cpp  about-dialog.hpp  controller.cpp  controller.hpp  debug.cpp  debug.h  debug.hpp  file.cpp  file.hpp  filesystem.cpp  filesystem.hpp  glkm.glade  glkm_aboutdialog.cc  glkm_aboutdialog.cpp  glkm_aboutdialog.h  glkm_aboutdialog.hpp  glkm_hal_device_proxy.cpp  glkm_hal_device_proxy.hpp  glkm_hal_manager_proxy.cpp  glkm_hal_manager_proxy.hpp  glkm_host.cpp  glkm_host.hpp  glkm_mainwindow.cc  glkm_mainwindow.cpp  glkm_mainwindow.h  glkm_mainwindow.hpp  glkm_procces.cpp  glkm_procces.hpp  glkm_statusbar.cpp  glkm_statusbar.hpp  glkm_treeview_host.cpp  glkm_treeview_host.hpp  glkm_treeview_process.cpp  glkm_treeview_process.hpp  glkm_treeviewhost.hpp  hal-controller.cpp  hal-controller.hpp  (+39 more)
hal/fdi/policy/20thirdparty/: 10-linux-kernel-monitor.fdi
hal/hald/: util.c  util.c.patch  util.h  util.h.patch  util.patch
hal/hald/linux/: device.c  device.c.patch
hal/hald/linux/addons/: Makefile.am  configure.ac
hal/hald/linux/addons/data/: Makefile.am  procmon.rules
hal/hald/linux/addons/src/: Makefile.am  hal-device-proxy.cpp  hal-manager-proxy.cpp  hal-manager-proxy.hpp  linux-kernel-monitor-server-adaptor.hpp  linux-kernel-monitor-server.cpp  linux-kernel-monitor-server.hpp  main.cc  utils.hpp
kernel-module/: Makefile  modulo.c  netlink.odg  netlink.txt  nl_procmon.c  nl_procmon.h  procmon.rules  procmon_dev.c
kernel-module/cat/: cat_noblock.c
kernel-module/catnoblock/: Makefile
kernel-module/test/: prueba.xml  style.css
